<resources>
    <string name="app_name">LAP</string>
    <string name="welcome">Welcome To Lap House</string>
    <string name="next">Next</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="reg">Register</string>
    <string name="uname">User Name</string>
    <string name="email">Email</string>
    <string name="Pwd">Password</string>
    <string name="Cpwd">Confirm Password</string>
    <string name="mob">Mobile</string>
    <string name="add">Address</string>
    <string name="edit">Edit</string>
    <string name="regi">Register</string>
    <string name="Lap">Lap House</string>
    <string name="customer">Customer</string>
    <string name="item">Item</string>
    <string name="payment">Payment</string>
    <string name="supply">Supply</string>
    <string name="aboutUs">About Us</string>
    <string name="imodel">Item Model</string>
    <string name="ibrand">Item Brand</string>
    <string name="iavailability">Item Availability</string>
    <string name="iadd">Item Add</string>
    <string name="cusde">Customer Details</string>
    <string name="dele">Delete</string>
    <string name="de">Delete</string>
    <string name="cusname">Customer Name</string>
    <string name="cusid">Customer ID</string>
    <string name="cusadd">Customer Address</string>
    <string name="icode">Item Code</string>
    <string name="viewde">View Details</string>
    <string name="viewDetails" />
    <string name="view1">ViewDeatails</string>
    <string name="cid">Customer ID</string>
</resources>