<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/additem_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Register">


    <EditText
        android:id="@+id/name"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:drawableStart="@color/colorAccent"
        android:drawableLeft="@color/colorAccent"
        android:ems="10"
        android:hint="@string/uname"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227" />

    <EditText
        android:id="@+id/email"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:drawableStart="@android:color/background_light"
        android:drawableLeft="@android:color/background_light"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

    <EditText
        android:id="@+id/itembrand"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:drawableStart="@android:color/background_light"
        android:drawableLeft="@android:color/background_light"
        android:ems="10"
        android:hint="@string/Cpwd"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

    <EditText
        android:id="@+id/mobile"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:drawableStart="@android:color/background_light"
        android:drawableLeft="@android:color/background_light"
        android:ems="10"
        android:hint="@string/mob"
        android:inputType="phone"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653" />

    <EditText
        android:id="@+id/address"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:drawableStart="@android:color/background_light"
        android:drawableLeft="@android:color/background_light"
        android:ems="10"
        android:hint="@string/add"
        android:inputType="textPostalAddress"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.746" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/regi"
        android:textColor="#009688"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg"
        android:textColor="#FFF2F2"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/pwd"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:drawableStart="@android:color/background_light"
        android:drawableLeft="@android:color/background_light"
        android:ems="10"
        android:hint="@string/Pwd"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432" />


</androidx.constraintlayout.widget.ConstraintLayout>